# atria_datasets

./: .gitignore  pyproject.toml  test3.py
examples/: prepare_dataset.sh
notebooks/: load_datasets.ipynb
notebooks/image_classification/: load_cifar10.ipynb  load_huggingface_cifar10.ipynb  upload_cifar10.ipynb
scripts/: build_registry.sh  format.sh  lint.sh  prepare_dataset.sh  test.sh
src/atria_datasets/: __init__.py  build_registry.py  prepare_dataset.py
src/atria_datasets/batch_samplers/: __init__.py
src/atria_datasets/conf/data_pipeline/: default.yaml
src/atria_datasets/conf/dataset/: cifar10.yaml  docbank.yaml  icdar2013.yaml  pubtables1m.yaml  sroie.yaml  wild_receipts.yaml
src/atria_datasets/conf/dataset/cifar10/: 1k.yaml  default.yaml
src/atria_datasets/conf/dataset/cord/: cordv2.yaml  default.yaml
src/atria_datasets/conf/dataset/docbank/: 0.1k.yaml  1k.yaml  default.yaml
src/atria_datasets/conf/dataset/docile/: default.yaml  kile.yaml  kile_synthetic.yaml  lir.yaml  lir_synthetic.yaml
src/atria_datasets/conf/dataset/doclaynet/: 2022.08.yaml  default.yaml
src/atria_datasets/conf/dataset/docvqa/: default.yaml
src/atria_datasets/conf/dataset/fintabnet/: 1k.yaml  default.yaml  structure.yaml
src/atria_datasets/conf/dataset/funsd/: default.yaml
src/atria_datasets/conf/dataset/huggingface_cifar10/: default.yaml  plain_text.yaml  plain_text_1k.yaml
src/atria_datasets/conf/dataset/icdar2013/: default.yaml  structure.yaml
src/atria_datasets/conf/dataset/icdar2019/: default.yaml  trackA_archival.yaml  trackA_modern.yaml
src/atria_datasets/conf/dataset/mnist/: default.yaml  mnist.yaml  mnist_1k.yaml
src/atria_datasets/conf/dataset/publaynet/: default.yaml
src/atria_datasets/conf/dataset/pubtables1m/: default.yaml  detection.yaml  detection_1k.yaml  structure.yaml  structure_1k.yaml
src/atria_datasets/conf/dataset/rvlcdip/: default.yaml  image.yaml  image_with_ocr.yaml  image_with_ocr_1k.yaml  main.yaml
src/atria_datasets/conf/dataset/sroie/: default.yaml
src/atria_datasets/conf/dataset/tobacco3482/: default.yaml  image_only.yaml  image_with_ocr.yaml  main.yaml
src/atria_datasets/conf/dataset/wild_receipts/: default.yaml
src/atria_datasets/core/: constants.py
src/atria_datasets/core/batch_samplers/: ar_group_batch_sampler.py  batch_samplers_dict.py  group_batch_sampler.py  utilities.py
src/atria_datasets/core/dataset/: __init__.py  atria_dataset.py  atria_deltalake_dataset.py  atria_hub_dataset.py  atria_huggingface_dataset.py  exceptions.py  instance_transform.py  split_iterator.py
src/atria_datasets/core/dataset_splitters/: standard_splitter.py
src/atria_datasets/core/download_manager/: __init__.py  download_file_info.py  download_manager.py  file_downloader.py
src/atria_datasets/core/storage/: delta_iterable_dataset.py  deltalake_reader.py  deltalake_storage_manager copy.py  deltalake_storage_manager.py  deltalake_storage_manager_tar.py  deltalake_streamer.py  msgpack_shard_writer.py  shard_list_datasets.py  shard_writer_actor.py  sharded_dataset_storage_manager.py  utilities.py
src/atria_datasets/core/transforms/: base.py
src/atria_datasets/core/typing/: common.py
src/atria_datasets/datasets/: __init__.py
src/atria_datasets/datasets/mock/: mock_image_dataset.py
src/atria_datasets/document_classification/: rvlcdip.py  tobacco3482.py
src/atria_datasets/image_classification/: __init__.py  cifar10.py  cifar10_huggingface.py  mnist.py
src/atria_datasets/layout_analysis/: doclaynet.py  icdar2019.py  publaynet.py  utilities.py
src/atria_datasets/mock/: mock_dataset.py  mock_document_dataset.py
src/atria_datasets/pipelines/: atria_data_pipeline.py  utilities.py
src/atria_datasets/registry/: __init__.py  module_registry.py  registry_groups.py
src/atria_datasets/ser/: cord.py  docbank.py  docile.py  funsd.py  sroie.py  utilities.py  wild_receipts.py
src/atria_datasets/ser/docile_utils/: preprocessor.py
src/atria_datasets/table_extraction/: fintabnet.py  icdar2013.py  pubtables1m.py  utilities.py
src/atria_datasets/transforms/: __init__.py  image.py  mmdet.py  sequence.py  torchvision.py
src/atria_datasets/vqa/: docvqa.py  utilities.py
tests/: base_imports.py
tests/registry/: test_module_registry.py  test_registry_entry.py  test_registry_group.py  utilities.py
tmp/: test.py  test2.py
tmp/hubtests/: test.py  test2.py
tmp/lakefs/: lakefs-refs.py
tmp/tmp2/: test.py  test2.py  test4.py  test5.py
